--- a/dev-perl/Lingua-EN-NameParse/ChangeLog
+++ b/dev-perl/Lingua-EN-NameParse/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Lingua-EN-NameParse
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Lingua-EN-NameParse/ChangeLog,v 1.9 2006/07/04 11:38:54 ian Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Lingua-EN-NameParse/ChangeLog,v 1.10 2006/07/10 16:20:12 agriffis Exp $
+
+  10 Jul 2006; Aron Griffis <agriffis@gentoo.org>
+  Lingua-EN-NameParse-1.22.ebuild:
+  Mark 1.22 stable on ia64
 
   04 Jul 2006; Christian Hartmann <ian@gentoo.org>
   Lingua-EN-NameParse-1.20.ebuild, Lingua-EN-NameParse-1.22.ebuild:
