--- a/dev-perl/Log-Log4perl/ChangeLog
+++ b/dev-perl/Log-Log4perl/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Log-Log4perl
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Log-Log4perl/ChangeLog,v 1.11 2006/06/23 20:11:54 mcummings Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Log-Log4perl/ChangeLog,v 1.12 2006/07/10 16:29:49 agriffis Exp $
+
+  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> Log-Log4perl-1.04.ebuild:
+  Mark 1.04 stable on ia64
 
 *Log-Log4perl-1.05 (23 Jun 2006)
 
