--- a/x11-apps/bdftopcf/ChangeLog
+++ b/x11-apps/bdftopcf/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/bdftopcf
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/bdftopcf/ChangeLog,v 1.26 2006/06/30 23:44:57 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/bdftopcf/ChangeLog,v 1.27 2006/07/10 16:32:35 agriffis Exp $
+
+  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> bdftopcf-1.0.0.ebuild:
+  Mark 1.0.0 stable on ia64
 
   30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
   bdftopcf-1.0.0.ebuild:
