--- a/x11-apps/sessreg/ChangeLog
+++ b/x11-apps/sessreg/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/sessreg
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/sessreg/ChangeLog,v 1.20 2006/07/01 01:48:48 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/sessreg/ChangeLog,v 1.21 2006/07/10 16:46:13 agriffis Exp $
+
+  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> sessreg-1.0.0.ebuild:
+  Mark 1.0.0 stable on ia64
 
   01 Jul 2006; Donnie Berkholz <spyderous@gentoo.org>; sessreg-1.0.0.ebuild:
   Keyword ~ia64 ~s390 or xdm's broken.
