--- a/dev-perl/Mail-DomainKeys/ChangeLog
+++ b/dev-perl/Mail-DomainKeys/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Mail-DomainKeys
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Mail-DomainKeys/ChangeLog,v 1.13 2006/07/04 11:51:42 ian Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Mail-DomainKeys/ChangeLog,v 1.14 2006/07/10 16:46:36 agriffis Exp $
+
+  10 Jul 2006; Aron Griffis <agriffis@gentoo.org>
+  Mail-DomainKeys-0.80.ebuild:
+  Mark 0.80 stable on ia64
 
   04 Jul 2006; Christian Hartmann <ian@gentoo.org>
   Mail-DomainKeys-0.80.ebuild:
