--- a/dev-perl/Mail-IMAPClient/ChangeLog
+++ b/dev-perl/Mail-IMAPClient/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Mail-IMAPClient
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Mail-IMAPClient/ChangeLog,v 1.11 2006/07/04 11:54:11 ian Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Mail-IMAPClient/ChangeLog,v 1.12 2006/07/10 16:47:47 agriffis Exp $
+
+  10 Jul 2006; Aron Griffis <agriffis@gentoo.org>
+  Mail-IMAPClient-2.2.9.ebuild:
+  Mark 2.2.9 stable on ia64
 
   04 Jul 2006; Christian Hartmann <ian@gentoo.org>
   Mail-IMAPClient-2.2.9.ebuild:
