--- a/dev-perl/Net-SNPP/ChangeLog
+++ b/dev-perl/Net-SNPP/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Net-SNPP
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Net-SNPP/ChangeLog,v 1.10 2006/07/04 13:54:35 ian Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Net-SNPP/ChangeLog,v 1.11 2006/07/10 17:09:36 agriffis Exp $
+
+  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> Net-SNPP-1.17.ebuild:
+  Mark 1.17 stable on ia64
 
   04 Jul 2006; Christian Hartmann <ian@gentoo.org> Net-SNPP-1.17.ebuild:
   Fixed RDEPEND wrt bug #134781
