--- a/dev-perl/NetPacket/ChangeLog
+++ b/dev-perl/NetPacket/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/NetPacket
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/NetPacket/ChangeLog,v 1.8 2006/03/30 23:08:31 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/NetPacket/ChangeLog,v 1.9 2006/07/10 17:11:43 agriffis Exp $
+
+  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> NetPacket-0.03.ebuild:
+  Mark 0.03 stable on ia64
 
   30 Mar 2006; Aron Griffis <agriffis@gentoo.org> NetPacket-0.03.ebuild:
   Mark 0.03 ~ia64
