--- a/dev-perl/OLE-StorageLite/ChangeLog
+++ b/dev-perl/OLE-StorageLite/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/OLE-StorageLite
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/OLE-StorageLite/ChangeLog,v 1.3 2006/03/30 23:09:26 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/OLE-StorageLite/ChangeLog,v 1.4 2006/07/10 17:13:46 agriffis Exp $
+
+  10 Jul 2006; Aron Griffis <agriffis@gentoo.org>
+  OLE-StorageLite-0.14.ebuild:
+  Mark 0.14 stable on ia64
 
   30 Mar 2006; Aron Griffis <agriffis@gentoo.org>
   OLE-StorageLite-0.14.ebuild:
