--- a/dev-perl/Params-Validate/ChangeLog
+++ b/dev-perl/Params-Validate/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Params-Validate
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Params-Validate/ChangeLog,v 1.41 2006/06/23 20:27:03 mcummings Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Params-Validate/ChangeLog,v 1.42 2006/07/10 17:19:05 agriffis Exp $
+
+  10 Jul 2006; Aron Griffis <agriffis@gentoo.org>
+  Params-Validate-0.81.ebuild:
+  Mark 0.81 stable on ia64
 
 *Params-Validate-0.85 (23 Jun 2006)
 
