--- a/x11-misc/shared-mime-info/ChangeLog
+++ b/x11-misc/shared-mime-info/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-misc/shared-mime-info
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/shared-mime-info/ChangeLog,v 1.56 2006/07/10 00:27:51 dang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/shared-mime-info/ChangeLog,v 1.57 2006/07/10 17:28:09 gustavoz Exp $
+
+  10 Jul 2006; Gustavo Zacarias <gustavoz@gentoo.org>
+  shared-mime-info-0.17-r2.ebuild:
+  Stable on sparc wrt #139661
 
   10 Jul 2006; Daniel Gryniewicz <dang@gentoo.org>
   shared-mime-info-0.17-r2.ebuild:
