--- a/dev-perl/Pod-Coverage/ChangeLog
+++ b/dev-perl/Pod-Coverage/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Pod-Coverage
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Pod-Coverage/ChangeLog,v 1.29 2006/07/04 18:57:43 ian Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Pod-Coverage/ChangeLog,v 1.30 2006/07/10 17:31:57 agriffis Exp $
+
+  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> Pod-Coverage-0.17.ebuild:
+  Mark 0.17 stable on ia64
 
   04 Jul 2006; Christian Hartmann <ian@gentoo.org> Pod-Coverage-0.16.ebuild,
   Pod-Coverage-0.17.ebuild:
