--- a/media-plugins/gst-plugins-flac/ChangeLog
+++ b/media-plugins/gst-plugins-flac/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/gst-plugins-flac
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/gst-plugins-flac/ChangeLog,v 1.70 2006/05/25 10:25:28 zaheerm Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/gst-plugins-flac/ChangeLog,v 1.71 2006/07/10 18:00:42 gustavoz Exp $
+
+  10 Jul 2006; Gustavo Zacarias <gustavoz@gentoo.org>
+  gst-plugins-flac-0.10.3.ebuild:
+  Stable on sparc wrt #139612
 
 *gst-plugins-flac-0.10.3 (25 May 2006)
 
