--- a/gnome-base/libbonobo/ChangeLog
+++ b/gnome-base/libbonobo/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for gnome-base/libbonobo
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/libbonobo/ChangeLog,v 1.100 2006/06/12 13:47:26 allanonjl Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/libbonobo/ChangeLog,v 1.101 2006/07/10 18:33:51 gustavoz Exp $
+
+  10 Jul 2006; Gustavo Zacarias <gustavoz@gentoo.org>
+  libbonobo-2.14.0.ebuild:
+  Stable on sparc wrt #139612
 
   12 Jun 2006; John N. Laliberte <allanonjl@gentoo.org>
   libbonobo-2.14.0.ebuild:
