--- a/app-text/evince/ChangeLog
+++ b/app-text/evince/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-text/evince
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/evince/ChangeLog,v 1.46 2006/06/29 20:45:47 dang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/evince/ChangeLog,v 1.47 2006/07/10 18:58:24 gustavoz Exp $
+
+  10 Jul 2006; Gustavo Zacarias <gustavoz@gentoo.org>
+  evince-0.5.3-r1.ebuild:
+  Stable on sparc wrt #139612
 
 *evince-0.5.3-r1 (29 Jun 2006)
 
