--- a/x11-libs/libxklavier/ChangeLog
+++ b/x11-libs/libxklavier/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/libxklavier
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libxklavier/ChangeLog,v 1.62 2006/04/28 00:07:33 antarus Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libxklavier/ChangeLog,v 1.63 2006/07/10 19:03:57 gustavoz Exp $
+
+  10 Jul 2006; Gustavo Zacarias <gustavoz@gentoo.org>
+  libxklavier-2.2.ebuild:
+  Stable on sparc wrt #139612
 
   28 Apr 2006; Alec Warner <antarus@gentoo.org>
   files/digest-libxklavier-2.0, Manifest:
