--- a/x11-apps/rgb/ChangeLog
+++ b/x11-apps/rgb/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/rgb
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/rgb/ChangeLog,v 1.30 2006/06/30 23:52:29 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-apps/cvs-repo/gentoo-x86/x11-apps/rgb/ChangeLog,v 1.31 2006/07/10 19:10:40 agriffis Exp $
+
+  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> rgb-1.0.1.ebuild:
+  Mark 1.0.1 stable on ia64
 
   30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>; rgb-1.0.1.ebuild:
   ppc/sparc/mips/alpha/arm/sh stable
