--- a/x11-libs/libXres/ChangeLog
+++ b/x11-libs/libXres/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/libXres
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libXres/ChangeLog,v 1.27 2006/06/30 23:32:53 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libXres/ChangeLog,v 1.28 2006/07/10 19:13:46 agriffis Exp $
+
+  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> libXres-1.0.1.ebuild:
+  Mark 1.0.1 stable on ia64
 
   30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>; libXres-1.0.1.ebuild:
   ppc/sparc/mips/alpha/arm/sh stable
