--- a/gnome-base/gnome-common/ChangeLog
+++ b/gnome-base/gnome-common/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for gnome-base/gnome-common
-# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gnome-common/ChangeLog,v 1.30 2005/09/23 17:23:52 dang Exp $
+# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gnome-common/ChangeLog,v 1.31 2006/07/10 19:18:57 gustavoz Exp $
+
+  10 Jul 2006; Gustavo Zacarias <gustavoz@gentoo.org>
+  gnome-common-2.12.0.ebuild:
+  Stable on sparc wrt #139612
 
 *gnome-common-2.12.0 (23 Sep 2005)
 
