--- a/gnome-base/gnome-desktop/ChangeLog
+++ b/gnome-base/gnome-desktop/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for gnome-base/gnome-desktop
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gnome-desktop/ChangeLog,v 1.148 2006/07/01 14:41:01 allanonjl Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gnome-desktop/ChangeLog,v 1.149 2006/07/10 20:11:48 gustavoz Exp $
+
+  10 Jul 2006; Gustavo Zacarias <gustavoz@gentoo.org>
+  gnome-desktop-2.14.2.ebuild:
+  Stable on sparc wrt #139612
 
 *gnome-desktop-2.14.2 (01 Jul 2006)
 
