--- a/gnome-base/gnome-vfs/ChangeLog
+++ b/gnome-base/gnome-vfs/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for gnome-base/gnome-vfs
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gnome-vfs/ChangeLog,v 1.199 2006/06/14 20:47:44 steev Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gnome-vfs/ChangeLog,v 1.200 2006/07/10 20:07:38 gustavoz Exp $
+
+  10 Jul 2006; Gustavo Zacarias <gustavoz@gentoo.org>
+  gnome-vfs-2.14.2.ebuild:
+  Stable on sparc wrt #139612
 
 *gnome-vfs-2.14.2 (14 Jun 2006)
 
