--- a/net-analyzer/gnome-nettool/ChangeLog
+++ b/net-analyzer/gnome-nettool/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-analyzer/gnome-nettool
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/gnome-nettool/ChangeLog,v 1.27 2006/06/30 21:52:56 dang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/gnome-nettool/ChangeLog,v 1.28 2006/07/10 20:41:13 gustavoz Exp $
+
+  10 Jul 2006; Gustavo Zacarias <gustavoz@gentoo.org>
+  gnome-nettool-2.14.2.ebuild:
+  Stable on sparc wrt #139612
 
 *gnome-nettool-2.14.2 (30 Jun 2006)
 
