--- a/dev-perl/SVN-Simple/ChangeLog
+++ b/dev-perl/SVN-Simple/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/SVN-Simple
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/SVN-Simple/ChangeLog,v 1.8 2006/07/04 19:55:52 ian Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/SVN-Simple/ChangeLog,v 1.9 2006/07/10 22:03:14 agriffis Exp $
+
+  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> SVN-Simple-0.27.ebuild:
+  Mark 0.27 stable on ia64
 
   04 Jul 2006; Christian Hartmann <ian@gentoo.org> SVN-Simple-0.26.ebuild,
   SVN-Simple-0.27.ebuild:
