--- a/x11-drivers/xf86-video-mga/ChangeLog
+++ b/x11-drivers/xf86-video-mga/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-drivers/xf86-video-mga
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-video-mga/ChangeLog,v 1.26 2006/07/01 00:57:51 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-video-mga/ChangeLog,v 1.27 2006/07/10 22:21:51 agriffis Exp $
+
+  10 Jul 2006; Aron Griffis <agriffis@gentoo.org>
+  xf86-video-mga-1.4.1.ebuild:
+  Mark 1.4.1 stable on ia64
 
   01 Jul 2006; Donnie Berkholz <spyderous@gentoo.org>;
   xf86-video-mga-1.4.1.ebuild:
