--- a/dev-perl/Text-German/ChangeLog
+++ b/dev-perl/Text-German/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Text-German
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Text-German/ChangeLog,v 1.8 2006/07/01 01:07:16 mcummings Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Text-German/ChangeLog,v 1.9 2006/07/10 22:26:55 agriffis Exp $
+
+  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> Text-German-0.06.ebuild:
+  Mark 0.06 stable on ia64
 
   01 Jul 2006; Michael Cummings <mcummings@gentoo.org>
   Text-German-0.06.ebuild:
