--- a/x11-drivers/xf86-video-voodoo/ChangeLog
+++ b/x11-drivers/xf86-video-voodoo/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-drivers/xf86-video-voodoo
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-video-voodoo/ChangeLog,v 1.20 2006/07/01 00:52:53 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-drivers/cvs-repo/gentoo-x86/x11-drivers/xf86-video-voodoo/ChangeLog,v 1.21 2006/07/10 22:11:53 agriffis Exp $
+
+  10 Jul 2006; Aron Griffis <agriffis@gentoo.org>
+  xf86-video-voodoo-1.1.0.ebuild:
+  Mark 1.1.0 stable on ia64
 
   01 Jul 2006; Donnie Berkholz <spyderous@gentoo.org>;
   xf86-video-voodoo-1.1.0.ebuild:
