--- a/dev-perl/Tk-CursorControl/ChangeLog
+++ b/dev-perl/Tk-CursorControl/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Tk-CursorControl
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Tk-CursorControl/ChangeLog,v 1.6 2006/07/05 11:56:06 ian Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Tk-CursorControl/ChangeLog,v 1.7 2006/07/10 22:42:09 agriffis Exp $
+
+  10 Jul 2006; Aron Griffis <agriffis@gentoo.org>
+  Tk-CursorControl-0.4.ebuild:
+  Mark 0.4 stable on ia64
 
   05 Jul 2006; Christian Hartmann <ian@gentoo.org>
   Tk-CursorControl-0.4.ebuild:
