--- a/dev-perl/jcode_pl/ChangeLog
+++ b/dev-perl/jcode_pl/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/jcode_pl
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/jcode_pl/Attic/ChangeLog,v 1.4 2006/03/30 23:49:42 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/jcode_pl/Attic/ChangeLog,v 1.5 2006/07/10 23:18:46 agriffis Exp $
+
+  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> jcode_pl-2.13.ebuild:
+  Mark 2.13 stable on ia64
 
   30 Mar 2006; Aron Griffis <agriffis@gentoo.org> jcode_pl-2.13.ebuild:
   Mark 2.13 ~ia64
