--- a/dev-perl/version/ChangeLog
+++ b/dev-perl/version/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/version
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/version/Attic/ChangeLog,v 1.14 2006/07/01 01:15:25 mcummings Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/version/Attic/ChangeLog,v 1.15 2006/07/10 23:48:46 agriffis Exp $
+
+  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> version-0.59.ebuild:
+  Mark 0.59 stable on ia64
 
   01 Jul 2006; Michael Cummings <mcummings@gentoo.org> version-0.59.ebuild:
   Marking stable amd64
