--- a/x11-libs/libXScrnSaver/ChangeLog
+++ b/x11-libs/libXScrnSaver/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/libXScrnSaver
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libXScrnSaver/ChangeLog,v 1.30 2006/06/30 23:33:14 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libXScrnSaver/ChangeLog,v 1.31 2006/07/11 01:23:52 agriffis Exp $
+
+  11 Jul 2006; Aron Griffis <agriffis@gentoo.org>
+  libXScrnSaver-1.1.0.ebuild:
+  Mark 1.1.0 stable on ia64
 
   30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
   libXScrnSaver-1.1.0.ebuild:
