--- a/app-admin/perl-cleaner/ChangeLog
+++ b/app-admin/perl-cleaner/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-admin/perl-cleaner
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/perl-cleaner/ChangeLog,v 1.25 2006/07/01 11:54:33 kloeri Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/perl-cleaner/ChangeLog,v 1.26 2006/07/11 10:21:51 mcummings Exp $
+
+  11 Jul 2006; Michael Cummings <mcummings@gentoo.org>
+  perl-cleaner-1.04.1.ebuild:
+  Keywording sparc and amd64 stable
 
   01 Jul 2006; Bryan Østergaard <kloeri@gentoo.org>
   perl-cleaner-1.04.ebuild:
