--- a/media-libs/libdca/ChangeLog
+++ b/media-libs/libdca/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/libdca
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libdca/ChangeLog,v 1.5 2007/04/22 01:14:15 kloeri Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libdca/ChangeLog,v 1.6 2007/04/22 11:01:52 corsair Exp $
+
+  22 Apr 2007; Markus Rothe <corsair@gentoo.org> libdca-0.0.5.ebuild:
+  Added ~ppc64; bug #175164
 
   22 Apr 2007; Bryan Østergaard <kloeri@gentoo.org> libdca-0.0.5.ebuild:
   Add ~alpha keyword, bug 175164.
