--- a/app-xemacs/xemacs-base/ChangeLog
+++ b/app-xemacs/xemacs-base/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-xemacs/xemacs-base
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-xemacs/cvs-repo/gentoo-x86/app-xemacs/xemacs-base/ChangeLog,v 1.12 2007/02/25 08:18:54 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-xemacs/cvs-repo/gentoo-x86/app-xemacs/xemacs-base/ChangeLog,v 1.13 2007/04/22 11:14:49 corsair Exp $
+
+  22 Apr 2007; Markus Rothe <corsair@gentoo.org> xemacs-base-2.08.ebuild:
+  Stable on ppc64
 
   25 Feb 2007; Hans de Graaff <graaff@gentoo.org> -xemacs-base-2.03.ebuild:
   Remove old version.
