--- a/x11-libs/libXcomposite/ChangeLog
+++ b/x11-libs/libXcomposite/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/libXcomposite
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libXcomposite/ChangeLog,v 1.36 2007/04/20 14:09:59 opfer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libXcomposite/ChangeLog,v 1.37 2007/04/22 13:33:26 dertobi123 Exp $
+
+  22 Apr 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  libXcomposite-0.3.1.ebuild:
+  ppc stable, bug #174959
 
   20 Apr 2007; Christian Faulhammer <opfer@gentoo.org>
   libXcomposite-0.3.1.ebuild:
