--- a/media-gfx/bootsplash/ChangeLog
+++ b/media-gfx/bootsplash/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/bootsplash
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/bootsplash/Attic/ChangeLog,v 1.64 2007/02/17 11:42:40 spock Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/bootsplash/Attic/ChangeLog,v 1.65 2007/04/22 14:22:51 spock Exp $
+
+  22 Apr 2007; Michał Januszewski <spock@gentoo.org>
+  bootsplash-0.6.1-r7.ebuild:
+  Use newinitd and newconfd (bug #174266).
 
   17 Feb 2007; Michał Januszewski <spock@gentoo.org>
   bootsplash-0.6.1-r7.ebuild:
