--- a/media-video/kino/ChangeLog
+++ b/media-video/kino/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-video/kino
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/kino/ChangeLog,v 1.70 2007/04/22 16:32:53 dertobi123 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/kino/ChangeLog,v 1.71 2007/04/22 16:45:11 armin76 Exp $
+
+  22 Apr 2007; Raúl Porcel <armin76@gentoo.org> kino-1.0.0.ebuild:
+  x86 stable wrt #175553
 
   22 Apr 2007; Tobias Scherbaum <dertobi123@gentoo.org> kino-1.0.0.ebuild:
   ppc stable, bug #175553
