--- a/media-libs/libsdl/ChangeLog
+++ b/media-libs/libsdl/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/libsdl
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libsdl/ChangeLog,v 1.126 2007/03/20 03:41:44 vapier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libsdl/ChangeLog,v 1.127 2007/04/22 18:27:02 armin76 Exp $
+
+  22 Apr 2007; Raúl Porcel <armin76@gentoo.org> libsdl-1.2.11-r2.ebuild:
+  ia64 + x86 stable
 
 *libsdl-1.2.11-r2 (20 Mar 2007)
 
