--- a/games-puzzle/ksudoku/ChangeLog
+++ b/games-puzzle/ksudoku/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for games-puzzle/ksudoku
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-puzzle/cvs-repo/gentoo-x86/games-puzzle/ksudoku/Attic/ChangeLog,v 1.7 2007/04/18 13:04:41 jokey Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/games-puzzle/cvs-repo/gentoo-x86/games-puzzle/ksudoku/Attic/ChangeLog,v 1.8 2007/04/22 22:05:56 jokey Exp $
+
+  22 Apr 2007; Markus Ullmann <jokey@gentoo.org> ksudoku-0.4.ebuild:
+  update dependency per bug #175176
 
   18 Apr 2007; Markus Ullmann <jokey@gentoo.org> ksudoku-0.4.ebuild:
   Reoder vars
