--- a/net-nntp/pan/ChangeLog
+++ b/net-nntp/pan/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-nntp/pan
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-nntp/cvs-repo/gentoo-x86/net-nntp/pan/ChangeLog,v 1.39 2007/04/15 00:15:20 swegener Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-nntp/cvs-repo/gentoo-x86/net-nntp/pan/ChangeLog,v 1.40 2007/04/23 20:15:32 welp Exp $
+
+  23 Apr 2007; Peter Weller <welp@gentoo.org> pan-0.127.ebuild:
+  Keyworded ~x86-fbsd
 
 *pan-0.127 (15 Apr 2007)
 
