--- a/net-firewall/shorewall/ChangeLog
+++ b/net-firewall/shorewall/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-firewall/shorewall
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-firewall/cvs-repo/gentoo-x86/net-firewall/shorewall/ChangeLog,v 1.133 2007/04/16 23:51:48 kloeri Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-firewall/cvs-repo/gentoo-x86/net-firewall/shorewall/ChangeLog,v 1.134 2007/04/23 22:53:17 kloeri Exp $
+
+  23 Apr 2007; Bryan Østergaard <kloeri@gentoo.org> shorewall-3.4.2.ebuild:
+  Add ~mips keyword, bug 172163.
 
   16 Apr 2007; Bryan Østergaard <kloeri@gentoo.org> shorewall-3.2.9.ebuild:
   Stable on Alpha, bug 174312.
