--- a/app-forensics/rkhunter/ChangeLog
+++ b/app-forensics/rkhunter/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-forensics/rkhunter
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-forensics/cvs-repo/gentoo-x86/app-forensics/rkhunter/ChangeLog,v 1.60 2007/04/07 15:08:05 welp Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-forensics/cvs-repo/gentoo-x86/app-forensics/rkhunter/ChangeLog,v 1.61 2007/04/24 10:57:36 eroyf Exp $
+
+  24 Apr 2007; Alexander Færøy <eroyf@gentoo.org> rkhunter-1.2.9.ebuild:
+  Stable on MIPS.
 
   07 Apr 2007; Peter Weller <welp@gentoo.org> rkhunter-1.2.9.ebuild:
   Stable on amd64 wrt bug 161943
