--- a/media-libs/libdvdread/ChangeLog
+++ b/media-libs/libdvdread/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/libdvdread
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libdvdread/ChangeLog,v 1.49 2007/01/04 22:39:31 drizzt Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libdvdread/ChangeLog,v 1.50 2007/04/24 11:35:56 armin76 Exp $
+
+  24 Apr 2007; Raúl Porcel <armin76@gentoo.org> libdvdread-0.9.7.ebuild:
+  ia64 + x86 stable
 
   04 Jan 2007; Timothy Redaelli <drizzt@gentoo.org> libdvdread-0.9.7.ebuild:
   Add ~x86-fbsd keyword
