--- a/media-video/gxine/ChangeLog
+++ b/media-video/gxine/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-video/gxine
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/gxine/ChangeLog,v 1.83 2007/02/01 10:38:19 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/gxine/ChangeLog,v 1.84 2007/04/24 12:23:05 armin76 Exp $
+
+  24 Apr 2007; Raúl Porcel <armin76@gentoo.org> gxine-0.5.11.ebuild:
+  x86 stable
 
 *gxine-0.5.11 (01 Feb 2007)
 
