--- a/app-emulation/vice/ChangeLog
+++ b/app-emulation/vice/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-emulation/vice
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-emulation/cvs-repo/gentoo-x86/app-emulation/vice/ChangeLog,v 1.44 2007/03/13 16:19:37 armin76 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-emulation/cvs-repo/gentoo-x86/app-emulation/vice/ChangeLog,v 1.45 2007/04/24 13:14:19 gustavoz Exp $
+
+  24 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org> vice-1.20.ebuild:
+  Stable on sparc
 
   13 Mar 2007; Raúl Porcel <armin76@gentoo.org> vice-1.20.ebuild:
   x86 stable
