--- a/dev-java/java-config-wrapper/ChangeLog
+++ b/dev-java/java-config-wrapper/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/java-config-wrapper
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/java-config-wrapper/ChangeLog,v 1.25 2007/03/18 21:52:58 betelgeuse Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/java-config-wrapper/ChangeLog,v 1.26 2007/04/24 13:43:20 armin76 Exp $
+
+  24 Apr 2007; Raúl Porcel <armin76@gentoo.org>
+  java-config-wrapper-0.13.ebuild:
+  ia64 stable wrt #175822
 
 *java-config-wrapper-0.13 (18 Mar 2007)
 
