--- a/dev-dotnet/gtkhtml-sharp/ChangeLog
+++ b/dev-dotnet/gtkhtml-sharp/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-dotnet/gtkhtml-sharp
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-dotnet/cvs-repo/gentoo-x86/dev-dotnet/gtkhtml-sharp/ChangeLog,v 1.57 2007/04/17 15:12:11 compnerd Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-dotnet/cvs-repo/gentoo-x86/dev-dotnet/gtkhtml-sharp/ChangeLog,v 1.58 2007/04/24 16:09:13 compnerd Exp $
+
+  24 Apr 2007; Saleem Abdulrasool <compnerd@gentoo.org>
+  gtkhtml-sharp-2.16.0.ebuild:
+  There may be possible ABI changes in gtkhtml-3.14
 
   17 Apr 2007; Saleem Abdulrasool <compnerd@gentoo.org>
   gtkhtml-sharp-2.16.0.ebuild:
